[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/fonts/Header.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/Hud/MenuPause/MenuPause.gd" type="Script" id=2]
[ext_resource path="res://interface/TextButton/TextButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/MenuConfirm/MenuConfirm.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/main/BackgroundHud.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="MenuPause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
is_active = false

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBody" type="VBoxContainer" parent="Menu"]
margin_left = 125.0
margin_top = 49.0
margin_right = 195.0
margin_bottom = 131.0
custom_constants/separation = 16

[node name="Pause" type="Label" parent="Menu/MenuBody"]
margin_right = 70.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Pause"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/MenuBody"]
margin_top = 32.0
margin_right = 70.0
margin_bottom = 82.0

[node name="ButtonResume" parent="Menu/MenuBody/Buttons" instance=ExtResource( 3 )]
margin_right = 70.0
margin_bottom = 14.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Resume"

[node name="ButtonHelp" parent="Menu/MenuBody/Buttons" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 70.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Help"

[node name="ButtonExit" parent="Menu/MenuBody/Buttons" instance=ExtResource( 3 )]
margin_top = 36.0
margin_right = 70.0
margin_bottom = 50.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Exit"

[node name="MenuConfirm" parent="." instance=ExtResource( 4 )]
is_active = false
